--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.MainActivity">
+    <LinearLayout
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        android:layout_marginVertical="@dimen/_10sdp"
+        android:gravity="center"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/fromIndex"
+            android:gravity="center"
+            android:hint="@string/from_index"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:id="@+id/toIndex"
+            android:hint="@string/to_index"
+            android:gravity="center"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_width="@dimen/_100sdp"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
+    <TextView
+        android:id="@+id/doneIndexText"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginVertical="@dimen/_20sdp"
+        android:textColor="@color/black"
+        android:paddingVertical="@dimen/_5sdp"
+        android:textStyle="bold"
+        android:textSize="@dimen/_14ssp"
+        tools:text="Done Index: 1(1000)"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/index"
+        android:hint="@string/index"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doneIndexText"
+        android:layout_marginVertical="@dimen/_20sdp"
+        android:layout_width="@dimen/_100sdp"
+        android:inputType="number"
+        android:layout_height="wrap_content"/>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/startBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/_10sdp"
-        android:backgroundTint="@color/black"
+        android:layout_marginBottom="@dimen/_30sdp"
+        android:paddingVertical="@dimen/_15sdp"
+        android:textSize="@dimen/_15ssp"
+        android:textStyle="bold"
+        android:paddingHorizontal="@dimen/_50sdp"
+        android:backgroundTint="@color/green"
         android:text="@string/start"
+        android:layout_marginVertical="@dimen/_20sdp"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/index" />
 </androidx.constraintlayout.widget.ConstraintLayout>
